--- a/vite/package.json
+++ b/vite/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pocketbase": ".\\pocketbase\\pocketbase serve"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
-    "kind-tiger": "^1.0.1"
+    "kind-tiger": "^1.0.1",
+    "pocketbase": "^0.21.1"
   }
 }
